# ezmaths

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ezmaths/: __init__.py  bin_search.py  coprime.py  divs.py  factorise.py  gcd.py  isprime.py  lcm.py
tests/: test_bin_search.py  test_coprime.py  test_divs.py  test_factorise.py  test_gcd.py  test_isprime.py  test_lcm.py
