[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezmaths_lib"
version = "0.1.0"
description = "Utils to optimize routine in solving math problems"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Daniyar Faizov", email = "daniiarfaizov@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
